# minimal-qt5-browser

./: .gitignore  CMakeLists.txt  main.cpp  main_tests.cpp  minimal  minimal.pro  minimal.pro_
